[package]
name = "wafrift-genome-registry"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wire format, ed25519 signing, and trust-list management for community-contributed wafrift evasion genomes."
readme = "README.md"
keywords = ["waf", "evasion", "wafrift", "ed25519", "registry"]
categories = ["network-programming", "cryptography"]

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std", "getrandom"] }
sha2 = "0.10"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
zeroize = { version = "1.8", features = ["derive"] }
tracing = { workspace = true }

[lints]
workspace = true
