[package]
name = "wafrift-grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Grammar-aware payload mutation engine — SQL, XSS, CMD, LDAP, SSRF, path traversal, SSTI."
readme = "README.md"
repository.workspace = true
keywords = ["waf", "grammar", "parser", "evasion", "security"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
wafrift-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
sqlparser = { workspace = true }
tracing = { workspace = true }
# Quote-free SQL mutator URL-decodes incoming payloads so its shape
# detection works on encoded forms (1%27+OR+%271%27%3D%271).
urlencoding = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
