[package]
name = "wafrift-grammar"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Grammar-aware payload mutation engine — SQL, XSS, CMD, LDAP, SSRF, path traversal, SSTI."
readme = "README.md"
repository.workspace = true
keywords = ["waf", "grammar", "parser", "evasion", "security"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
wafrift-types = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
sqlparser = { workspace = true }
tracing = { workspace = true }
# Quote-free SQL mutator URL-decodes incoming payloads so its shape
# detection works on encoded forms (1%27+OR+%271%27%3D%271).
urlencoding = { workspace = true }
# Real NFKC normalization — builds the complete inverse-NFKC preimage map for
# the normalization-differential homoglyph engine (grammar::nfkc_preimage).
unicode-normalization = "0.1.24"

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
# Path-only (no version) on purpose: wafrift-oracle depends on wafrift-grammar,
# so a versioned dev-dep here would be an unpublishable cycle. cargo drops
# path-only dev-deps from the published manifest; the local test build resolves
# it via the path.
wafrift-oracle = { path = "../oracle" }
criterion = { version = "0.5", features = ["html_reports"] }
# Drives the dogfood test that proves the NFKC-preimage engine defeats real
# OWASP-CRS-941 XSS regexes.
regex = "1"

[[bench]]
name = "sql_mutate_hot_paths"
harness = false

[lints]
workspace = true
