[package]
name = "wafrift-http3-evasion"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP/3 + QUIC protocol-level WAF evasion — QPACK desync, 0-RTT replay, CID rotation, stream-priority games"
readme = "README.md"
repository.workspace = true
keywords = ["waf", "http3", "quic", "evasion", "security"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
wafrift-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
bytes = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
