[package]
name = "wafrift-oracle"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Payload validity oracles for SQL, SSRF, path traversal, command injection, and template injection."
readme = "README.md"
keywords = ["waf", "oracle", "sql", "security", "parser"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true }
sqlparser = { workspace = true }
wafrift-grammar = { workspace = true }
wafrift-types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = "2"
flate2 = "1"
# DoH provider (RFC 8484 DNS wire format) + STUN provider polling.
reqwest = { workspace = true }
base64 = { workspace = true }
# OOB canary IDs (always needed — dns_rebind.rs and doh_provider.rs use Uuid).
uuid = { workspace = true, features = ["v4"] }
# Optional: real interactsh OOB provider.
interactsh = { version = "0.2.1", optional = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
toml = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
interactsh-provider = ["dep:interactsh"]

[lints]
workspace = true
