[package]
name = "wafrift-plugin-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Plugin / tamper API — load external tampers from TOML or WebAssembly without rebuilding wafrift."
readme = "README.md"
repository.workspace = true
keywords = ["waf", "plugin", "tamper", "wasm", "evasion"]
categories = ["network-programming", "web-programming"]

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# WASM sandbox: no WASI, no syscalls, no network, no filesystem from guest.
# Workspace entry declares: version = "30", features = ["runtime", "cranelift"]
wasmtime = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
