[package]
name = "wafrift-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP forward proxy with automatic WAF evasion and optional TLS interception support."
readme = "README.md"
keywords = ["waf", "proxy", "http", "evasion", "security"]
categories = ["network-programming", "web-programming"]

[dependencies]
wafrift-types = { workspace = true }
wafrift-strategy = { workspace = true }
wafrift-transport = { workspace = true }
wafrift-encoding = { workspace = true }
wafrift-detect = { workspace = true }
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rcgen = { workspace = true }
time = { workspace = true }
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
moka = { workspace = true }
dirs = { workspace = true }

[features]
default = []
# Forwards the wafrift-transport `tls-impersonate` feature so that
# `wafrift-proxy --tls-impersonate <profile>` actually engages the
# StealthClient (rquest + BoringSSL) instead of erroring at startup.
# Without this feature, the CLI flag is accepted (clap parses it) but
# StealthClient::new() returns the actionable "rebuild with feature"
# error and the proxy exits cleanly. See docs/TLS_PARITY.md.
tls-impersonate = ["wafrift-transport/tls-impersonate"]

[lints]
workspace = true
