[package]
name = "wafrift-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP forward proxy with automatic WAF evasion and optional TLS interception support."
readme = "README.md"
keywords = ["waf", "proxy", "http", "evasion", "security"]
categories = ["network-programming", "web-programming"]

[dependencies]
wafrift-types = { workspace = true }
wafrift-strategy = { workspace = true }
wafrift-transport = { workspace = true }
wafrift-encoding = { workspace = true }
wafrift-detect = { workspace = true }
# body_padding lives in wafrift-evolution (the natural home for evasion
# mutators). Pulled in to apply the 8KB/16KB cloud-WAF inspection
# bypass before the upstream forward.
wafrift-evolution = { workspace = true }
# Multi-signal response oracle: classifies upstream responses into Verdict
# (Blocked / Allowed / Ambiguous / ChallengeRequired / RateLimited) using
# status code, body markers, response time, connection behaviour, and HTTP/2
# GOAWAY. Used in the forward path to detect "200-cosplay" blocks (soft
# challenges, cached error pages served as 200) and prevent them from being
# counted as bypasses.
wafrift-oracle = { workspace = true }
tokio.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
rcgen = { workspace = true }
time = { workspace = true }
tokio-rustls.workspace = true
rustls = { workspace = true, features = ["ring"] }
rustls-pki-types = { workspace = true }
webpki-roots = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
moka = { workspace = true }
dirs = { workspace = true }
http = { workspace = true }
thiserror = { workspace = true }
# Terminal dashboard (--tui). ratatui + crossterm are workspace deps,
# already pulled in by wafrift-cli, so we don't add a new transitive
# tree — just turn them on for the proxy binary.
ratatui = { workspace = true }
crossterm = { workspace = true }
# Best-effort clipboard for the TUI's curl-yank action; default-features
# off so headless servers (no X11/wayland) still build. The yank action
# falls back to writing /tmp/wafrift-yank-N.curl when arboard fails.
arboard = { workspace = true, optional = true }
# Optional captchaforge bridge — pulls chromiumoxide. Default builds
# do NOT include this; opt in with `--features captchaforge`. Without it the
# flag is rejected at clap-parse time with an actionable hint.
wafrift-captchaforge-bridge = { workspace = true, optional = true }

# SIGPIPE handler reset on Unix so `wafrift-proxy ... | head` exits silently
# instead of panicking.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = { version = "2.1", default-features = false, features = ["color"] }
wafrift-oracle = { workspace = true }
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2"] }
base64 = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "cookies", "gzip", "brotli", "stream", "json", "system-proxy"] }
# Dev-only — used by tests/bogon_scanclient_parity.rs to assert
# wafrift_types::bogon and scanclient::bogon agree byte-for-byte on
# every IP they classify. Twin implementations live in both crates
# because forcing scanclient (reqwest tree) into wafrift-types
# would balloon every wafrift compile. Drift fails CI here.
scanclient = { path = "../../../../libs/scanner/scanclient" }

[features]
default = ["clipboard"]
clipboard = ["dep:arboard"]
# When enabled at build time, the proxy gains a `--captchaforge` flag
# that installs the headless-browser solver into ChallengeStore. Without
# this feature the flag is rejected at startup and the binary exits
# cleanly with an actionable hint to rebuild.
captchaforge = ["dep:wafrift-captchaforge-bridge"]
# Forwards the wafrift-transport `tls-impersonate` feature so that
# `wafrift-proxy --tls-impersonate <profile>` actually engages the
# StealthClient (rquest + BoringSSL) instead of erroring at startup.
# Without this feature, the CLI flag is accepted (clap parses it) but
# StealthClient::new() returns the actionable "rebuild with feature"
# error and the proxy exits cleanly. See docs/TLS_PARITY.md.
tls-impersonate = ["wafrift-transport/tls-impersonate"]

[lints]
workspace = true
