[package]
name = "wafrift-recon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Origin discovery and recon (CT logs, historical DNS, active HTTP/TCP probing) for wafrift"

[dependencies]
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Needed by discovery::param_miner::read_bounded_len's bytes_stream loop.
futures-util.workspace = true
wafrift-types = { workspace = true }
toml = { workspace = true }
# Needed by discovery::param_miner::probe_one — percent-encode wordlist
# entries so `&`/`=`/`#`/whitespace in a candidate never split into
# unintended params or fragments (F96).
urlencoding = { workspace = true }

[dev-dependencies]
axum = { version = "0.7", default-features = false, features = ["http1", "tokio"] }

[lints]
workspace = true
