[package]
name = "wafrift-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "reqwest middleware for automatic WAF evasion — drop-in replacement for reqwest::Client"
readme = "README.md"
repository.workspace = true
keywords = ["waf", "transport", "reqwest", "http", "evasion"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
wafrift-types = { workspace = true }
wafrift-strategy = { workspace = true }
# Per-host browser-profile coherence (HeaderOrder + H2Profile +
# SessionPool) — used by the wire-time header reorder step so
# `--tls-impersonate chrome131` ALSO emits headers in Chrome's
# canonical insertion order, not whichever order callers happened
# to push them. The fingerprint crate is dep-light (no TLS, no h2),
# so this isn't a build-cost penalty.
wafrift-fingerprint = { workspace = true }
authjar = { path = "../../../../libs/runtime/authjar" }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
psl = "2"
# JWT HS256 (jwt.rs Hs256WithKey manipulation) — small, no extra
# compile-time cost. RustCrypto's HMAC + SHA-256.
hmac = "0.12"
sha2 = "0.10"
wafrift-pool = { workspace = true, optional = true }
rquest = { workspace = true, optional = true }
# Companion crate carrying the actual browser-emulation profiles
# (Chrome131, Firefox133, etc.) split out of rquest in 5.x. Gated
# behind the same tls-impersonate feature.
rquest-util = { workspace = true, optional = true }
# Required by `tls-impersonate` (StealthClient bytes_stream loop).
# Also pulled in transitively by reqwest in default builds, so this
# explicit declaration doesn't bloat anything.
futures-util = { workspace = true, optional = true }
rand = { workspace = true }
# gossan-origin = { path = "../../../gossan/crates/origin", optional = true }

[features]
proxy-pool = ["dep:wafrift-pool"]
# origin-bypass = ["dep:gossan-origin"]
origin-bypass = []
# Wire-identical browser TLS ClientHello via rquest + BoringSSL.
# When enabled, `transport::stealth::StealthClient` is available and
# `--tls-impersonate chrome131` (et al.) on scan/proxy paths produces
# a ClientHello that JA3-matches a real Chrome 131. Pulls in boring-sys
# (C build); not on by default. See docs/TLS_PARITY.md.
tls-impersonate = ["dep:rquest", "dep:rquest-util", "dep:futures-util"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }

[lints]
workspace = true

