[package]
name = "wafrift-transport"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "reqwest middleware for automatic WAF evasion, drop-in replacement for reqwest Client"
readme = "README.md"
repository.workspace = true
keywords = ["waf", "transport", "reqwest", "http", "evasion"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
serde_json = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
base64 = { workspace = true }
wafrift-types = { workspace = true }
wafrift-strategy = { workspace = true }
guise = { workspace = true }
scanclient = { workspace = true, default-features = false }
authjar = { path = "../../../../libs/runtime/authjar" }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
urlencoding = { workspace = true }
url = { workspace = true }
psl = "2"
# JWT HS256 (jwt.rs Hs256WithKey manipulation) -- small, no extra
# compile-time cost. RustCrypto's HMAC + SHA-256.
hmac = "0.12"
sha2 = "0.10"
proxywire = { workspace = true }
rand = { workspace = true }
# gossan-origin = { path = "../../../gossan/crates/origin", optional = true }

[features]
# Toggles whether the default EvasionClient wires a rotating proxy pool.
# The pool itself is proxywire (always compiled); this is a behaviour switch.
proxy-pool = []
# origin-bypass = ["dep:gossan-origin"]
origin-bypass = []
# Wire-identical browser TLS ClientHello via rquest + BoringSSL.
# When enabled, `transport::stealth::StealthClient` is available and
# `--tls-impersonate chrome131` (et al.) on scan/proxy paths produces
# a ClientHello that JA3-matches a real Chrome 131. Pulls in boring-sys
# (C build); not on by default. See docs/TLS_PARITY.md.
tls-impersonate = ["scanclient/tls-impersonate"]

[dev-dependencies]
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
wiremock = { workspace = true }

[lints]
workspace = true
