[package]
name = "wafrift-types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core types for WAF Rift — Request, Technique, EvasionResult, Config, Error."
readme = "README.md"
keywords = ["waf", "types", "http", "security", "evasion"]
categories = ["network-programming", "web-programming"]
repository.workspace = true

[dependencies]
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }
