[package]
name = "mctrust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Monte Carlo Tree Search framework for game/evasion trajectory optimization"
readme = "README.md"
repository.workspace = true
keywords = ["mcts", "search", "strategy", "evasion", "rust"]
categories = ["algorithms"]

[dependencies]
rand = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
